test/extended/util/compat_otp/testdata/networking/metrics/metrics-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: hello-pod
  labels:
    name: hello-pod
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: hello-pod
    image: quay.io/openshifttest/hello-sdn@sha256:c89445416459e7adea9a5a416b3365ed3d74f2491beb904d61dc8d1eb89a72a4
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
